<resources>
    <string name="app_name">Wild Africa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_news">News</string>
    <string name="menu_safaris">Safaris</string>
    <string name="menu_involved">Get Involved</string>
    <string name="menu_announcement">Announcements</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contributors">Open Source Licences</string>
    <string name="categories_screen_title">Categories</string>
    <string name="licences_title">Open source licences</string>
    <string name="safaris_title">Safaris</string>
    <string name="get_involved_title">Get Involved</string>
    <string name="try_again">Try Again</string>
    <string name="something_went_wrong_try_again_later_or_refresh">Something went wrong, try again later or refresh.</string>
    <string name="no_network_connection_please_check_connection">No network connection, Please check connection and try again.</string>
    <string name="title_activity_animal_details">AnimalDetailsActivity</string>
    <string name="scientific_names">Scientific Names:</string>
    <string name="habitat">Where do they live? </string>
    <string name="predators">Predators</string>
    <string name="locations">Countries where you can still find %1$s in their natural environment.</string>
    <string name="facts">Facts</string>
    <string name="gallery">Gallery</string>
    <string name="other">Other</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="read_more">READ MORE</string>
    <string name="view_all">View All</string>
    <string name="read_less">SEE LESS</string>
    <string name="basic_information">Basic Information</string>
    <string name="title_activity_media_view">MediaViewActivity</string>
    <string name="google_maps">maps</string>
    <string name="static_map_url">https://maps.googleapis.com/maps/api/staticmap?zoom=10&amp;size=2048x2048&amp;markers=color:red|</string>
    <string name="more_info">More Info</string>
    <string name="header_text">This is a list of organizations leading in wildlife conservation and endangered species you can choose to be part of to assist in their cause.</string>
    <string name="i_want_to_volunteer_or_contribute_to_this_cause">I want to volunteer</string>
    <string name="looks_like_you_don_t_have_any_favorite_animals">Looks like you don\'t have favorite Animals.</string>
    <string name="favourite_fab">favourite fab</string>
    <string name="prey">Prey</string>
    <string name="connect">Connect with us</string>
    <string name="filter">Show by By:</string>
    <string name="title_home">Home</string>
    <string name="title_animals">Animals</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_more">More</string>
    <string name="title_safaris">Safaris</string>
    <string name="filter_image">Filter Image</string>
    <string name="source">The above information was sourced from <![CDATA[<b>%1$s</b>]]> for more information click <![CDATA[<b>here</b>]]>.</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="action_settings">Settings</string>
    <string name="default_title">Wild Africa</string>
</resources>