<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_announcements"
            android:title="@string/menu_announcement" />

        <item
            android:id="@+id/nav_safaris"
            android:icon="@drawable/ic_safaris"
            android:title="@string/menu_safaris" />

        <item
            android:id="@+id/nav_get_involved"
            android:icon="@drawable/ic_get_involved"
            android:title="@string/menu_involved" />
    </group>

    <group>


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_contributors"
                android:title="@string/menu_contributors" />
        </menu>
    </item>

</menu>
