<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_animals"
        android:icon="@drawable/ic_rhino"
        android:title="@string/title_animals"/>

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/title_favourites"/>

    <item
        android:id="@+id/navigation_safaris"
        android:icon="@drawable/ic_landscape"
        android:title="@string/title_safaris"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more"/>
</menu>
