<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.getInvolved.FoundationDetailsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/foundation_logo_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="250dp"
                android:minHeight="180dp"
                android:scaleType="centerCrop"
                tools:layout_width="match_parent"
                tools:src="@tools:sample/avatars" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/connect"
                android:textSize="24sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/cardBackground" />

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_instagram" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_youtube" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_web" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardBackground" />

            <TextView
                android:id="@+id/tag_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/no_network_connection_please_check_connection"
                android:textAlignment="center"
                android:textSize="24sp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/volunteer_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageButton2"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="8dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_volunteer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/i_want_to_volunteer_or_contribute_to_this_cause"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/content_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="@tools:sample/lorem/random" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>